tests/golden/errors/orphan_continuation.stderr
error[formatting]: a continuation may not follow a blank line — the statement it would splice into has closed
  --> orphan_continuation.kso:3:3
   3 |   >> print "two"
         ^
